syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.fyg.grpc.proto";
option java_outer_classname = "MusicStreamingProto";

message EmptyRequest {}

message User {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
}

message Song {
  int32 id = 1;
  string name = 2;
  string artist = 3;
}

message Playlist {
  int32 id = 1;
  string name = 2;
  int32 userId = 3;
  repeated int32 songs = 4;
}

service MusicStreamingService {
  rpc GetUsers (EmptyRequest) returns (GetUsersReply) {}

  rpc GetSongs (EmptyRequest) returns (GetSongsReply) {}

  rpc GetPlaylists (EmptyRequest) returns (GetPlaylistsReply) {}

  rpc CreateUser (CreateUserRequest) returns (User) {}

  rpc CreateSong (CreateSongRequest) returns (Song) {}

  rpc CreatePlaylist (CreatePlaylistRequest) returns (Playlist) {}

  rpc UpdateUser (UpdateUserRequest) returns (User) {}

  rpc UpdateSong (UpdateSongRequest) returns (Song) {}

  rpc UpdatePlaylist (UpdatePlaylistRequest) returns (Playlist) {}

  rpc DeleteUser (IdRequest) returns (User) {}

  rpc DeleteSong (IdRequest) returns (Song) {}

  rpc DeletePlaylist (IdRequest) returns (Playlist) {}
}

message IdRequest {
  int32 id = 1;
}

message GetUsersReply {
  repeated User users = 1;
}

message GetSongsReply {
  repeated Song songs = 1;
}

message GetPlaylistsReply {
  repeated Playlist playlists = 1;
}

message CreateUserRequest {
  string name = 1;
  int32 age = 2;
}

message CreateSongRequest {
  string name = 1;
  string artist = 2;
}

message CreatePlaylistRequest {
  string name = 1;
  int32 userId = 2;
  repeated int32 songs = 3;
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
}

message UpdateSongRequest {
  int32 id = 1;
  string name = 2;
  string artist = 3;
}

message UpdatePlaylistRequest {
  int32 id = 1;
  string name = 2;
  int32 userId = 3;
  repeated int32 songs = 4;
}